# Cap

./: .npmrc  AGENTS.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  output.rs  record.rs  screenshot.rs
