[package]
name = "cap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
cap-utils = { path = "../../crates/utils" }
cap-project = { path = "../../crates/project" }
cap-rendering = { path = "../../crates/rendering" }
cap-editor = { path = "../../crates/editor" }
cap-media = { path = "../../crates/media" }
cap-flags = { path = "../../crates/flags" }
cap-recording = { path = "../../crates/recording" }
cap-export = { path = "../../crates/export" }
cap-camera = { path = "../../crates/camera" }
scap-targets = { path = "../../crates/scap-targets" }
serde = { workspace = true }
serde_json = "1.0.133"
tokio = { workspace = true, features = ["signal"] }
uuid = { version = "1.11.1", features = ["v4"] }
ffmpeg = { workspace = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
flume.workspace = true
chrono = "0.4"
image = "0.25"
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { workspace = true }

[lints]
workspace = true
